# nyx

./: .gitignore  .gitmodules  .prettierignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  bun.lockb  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  format.yml
example/: index.nyx  index1.nyx  index2.nyx  index3.nyx
include/: ast.h  code_generator.h  interpreter.h  lexer.h  parser.h  token.h
scripts/: postinstall.js
src/: ast.ts  cli.ts  code_generator.cpp  code_generator.ts  compiler.cpp  compiler.h  errors.ts  interpreter.cpp  interpreter.ts  lexer.cpp  lexer.ts  main.cpp  main.ts  parser.cpp  parser.ts  tokenizer.ts
src/interfaces/: Module.ts
src/stdlib/: http.ts  index.ts  io.ts
